TP2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> bloc
Rule 2     bloc -> bloc statement SEMI
Rule 3     bloc -> statement SEMI
Rule 4     statement -> PRINT LPAREN expression RPAREN
Rule 5     statement -> NAME EGAL expression
Rule 6     expression -> expression INF expression
Rule 7     expression -> expression INFEG expression
Rule 8     expression -> expression SUP expression
Rule 9     expression -> expression EGALEGAL expression
Rule 10    expression -> expression AND expression
Rule 11    expression -> expression OR expression
Rule 12    expression -> expression PLUS expression
Rule 13    expression -> expression TIMES expression
Rule 14    expression -> expression MINUS expression
Rule 15    expression -> expression DIVIDE expression
Rule 16    expression -> LPAREN expression RPAREN
Rule 17    expression -> NUMBER
Rule 18    expression -> NAME
Rule 19    statement -> IF LPAREN expression RPAREN LACC bloc RACC
Rule 20    statement -> IF LPAREN expression RPAREN LACC bloc RACC ELSE LACC bloc RACC

Terminals, with rules where they appear

AND                  : 10
DIVIDE               : 15
EGAL                 : 5
EGALEGAL             : 9
ELSE                 : 20
IF                   : 19 20
INF                  : 6
INFEG                : 7
LACC                 : 19 20 20
LPAREN               : 4 16 19 20
MINUS                : 14
NAME                 : 5 18
NUMBER               : 17
OR                   : 11
PLUS                 : 12
PRINT                : 4
RACC                 : 19 20 20
RPAREN               : 4 16 19 20
SEMI                 : 2 3
SUP                  : 8
TIMES                : 13
error                : 

Nonterminals, with rules where they appear

bloc                 : 1 2 19 20 20
expression           : 4 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 19 20
start                : 0
statement            : 2 3

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . bloc
    (2) bloc -> . bloc statement SEMI
    (3) bloc -> . statement SEMI
    (4) statement -> . PRINT LPAREN expression RPAREN
    (5) statement -> . NAME EGAL expression
    (19) statement -> . IF LPAREN expression RPAREN LACC bloc RACC
    (20) statement -> . IF LPAREN expression RPAREN LACC bloc RACC ELSE LACC bloc RACC

    PRINT           shift and go to state 4
    NAME            shift and go to state 5
    IF              shift and go to state 6

    start                          shift and go to state 1
    bloc                           shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> start .



state 2

    (1) start -> bloc .
    (2) bloc -> bloc . statement SEMI
    (4) statement -> . PRINT LPAREN expression RPAREN
    (5) statement -> . NAME EGAL expression
    (19) statement -> . IF LPAREN expression RPAREN LACC bloc RACC
    (20) statement -> . IF LPAREN expression RPAREN LACC bloc RACC ELSE LACC bloc RACC

    $end            reduce using rule 1 (start -> bloc .)
    PRINT           shift and go to state 4
    NAME            shift and go to state 5
    IF              shift and go to state 6

    statement                      shift and go to state 7

state 3

    (3) bloc -> statement . SEMI

    SEMI            shift and go to state 8


state 4

    (4) statement -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 9


state 5

    (5) statement -> NAME . EGAL expression

    EGAL            shift and go to state 10


state 6

    (19) statement -> IF . LPAREN expression RPAREN LACC bloc RACC
    (20) statement -> IF . LPAREN expression RPAREN LACC bloc RACC ELSE LACC bloc RACC

    LPAREN          shift and go to state 11


state 7

    (2) bloc -> bloc statement . SEMI

    SEMI            shift and go to state 12


state 8

    (3) bloc -> statement SEMI .

    PRINT           reduce using rule 3 (bloc -> statement SEMI .)
    NAME            reduce using rule 3 (bloc -> statement SEMI .)
    IF              reduce using rule 3 (bloc -> statement SEMI .)
    $end            reduce using rule 3 (bloc -> statement SEMI .)
    RACC            reduce using rule 3 (bloc -> statement SEMI .)


state 9

    (4) statement -> PRINT LPAREN . expression RPAREN
    (6) expression -> . expression INF expression
    (7) expression -> . expression INFEG expression
    (8) expression -> . expression SUP expression
    (9) expression -> . expression EGALEGAL expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 14

state 10

    (5) statement -> NAME EGAL . expression
    (6) expression -> . expression INF expression
    (7) expression -> . expression INFEG expression
    (8) expression -> . expression SUP expression
    (9) expression -> . expression EGALEGAL expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 17

state 11

    (19) statement -> IF LPAREN . expression RPAREN LACC bloc RACC
    (20) statement -> IF LPAREN . expression RPAREN LACC bloc RACC ELSE LACC bloc RACC
    (6) expression -> . expression INF expression
    (7) expression -> . expression INFEG expression
    (8) expression -> . expression SUP expression
    (9) expression -> . expression EGALEGAL expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 18

state 12

    (2) bloc -> bloc statement SEMI .

    PRINT           reduce using rule 2 (bloc -> bloc statement SEMI .)
    NAME            reduce using rule 2 (bloc -> bloc statement SEMI .)
    IF              reduce using rule 2 (bloc -> bloc statement SEMI .)
    $end            reduce using rule 2 (bloc -> bloc statement SEMI .)
    RACC            reduce using rule 2 (bloc -> bloc statement SEMI .)


state 13

    (16) expression -> LPAREN . expression RPAREN
    (6) expression -> . expression INF expression
    (7) expression -> . expression INFEG expression
    (8) expression -> . expression SUP expression
    (9) expression -> . expression EGALEGAL expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 19

state 14

    (4) statement -> PRINT LPAREN expression . RPAREN
    (6) expression -> expression . INF expression
    (7) expression -> expression . INFEG expression
    (8) expression -> expression . SUP expression
    (9) expression -> expression . EGALEGAL expression
    (10) expression -> expression . AND expression
    (11) expression -> expression . OR expression
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . TIMES expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 20
    INF             shift and go to state 21
    INFEG           shift and go to state 22
    SUP             shift and go to state 23
    EGALEGAL        shift and go to state 24
    AND             shift and go to state 25
    OR              shift and go to state 26
    PLUS            shift and go to state 27
    TIMES           shift and go to state 28
    MINUS           shift and go to state 29
    DIVIDE          shift and go to state 30


state 15

    (17) expression -> NUMBER .

    RPAREN          reduce using rule 17 (expression -> NUMBER .)
    INF             reduce using rule 17 (expression -> NUMBER .)
    INFEG           reduce using rule 17 (expression -> NUMBER .)
    SUP             reduce using rule 17 (expression -> NUMBER .)
    EGALEGAL        reduce using rule 17 (expression -> NUMBER .)
    AND             reduce using rule 17 (expression -> NUMBER .)
    OR              reduce using rule 17 (expression -> NUMBER .)
    PLUS            reduce using rule 17 (expression -> NUMBER .)
    TIMES           reduce using rule 17 (expression -> NUMBER .)
    MINUS           reduce using rule 17 (expression -> NUMBER .)
    DIVIDE          reduce using rule 17 (expression -> NUMBER .)
    SEMI            reduce using rule 17 (expression -> NUMBER .)


state 16

    (18) expression -> NAME .

    RPAREN          reduce using rule 18 (expression -> NAME .)
    INF             reduce using rule 18 (expression -> NAME .)
    INFEG           reduce using rule 18 (expression -> NAME .)
    SUP             reduce using rule 18 (expression -> NAME .)
    EGALEGAL        reduce using rule 18 (expression -> NAME .)
    AND             reduce using rule 18 (expression -> NAME .)
    OR              reduce using rule 18 (expression -> NAME .)
    PLUS            reduce using rule 18 (expression -> NAME .)
    TIMES           reduce using rule 18 (expression -> NAME .)
    MINUS           reduce using rule 18 (expression -> NAME .)
    DIVIDE          reduce using rule 18 (expression -> NAME .)
    SEMI            reduce using rule 18 (expression -> NAME .)


state 17

    (5) statement -> NAME EGAL expression .
    (6) expression -> expression . INF expression
    (7) expression -> expression . INFEG expression
    (8) expression -> expression . SUP expression
    (9) expression -> expression . EGALEGAL expression
    (10) expression -> expression . AND expression
    (11) expression -> expression . OR expression
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . TIMES expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . DIVIDE expression

    SEMI            reduce using rule 5 (statement -> NAME EGAL expression .)
    INF             shift and go to state 21
    INFEG           shift and go to state 22
    SUP             shift and go to state 23
    EGALEGAL        shift and go to state 24
    AND             shift and go to state 25
    OR              shift and go to state 26
    PLUS            shift and go to state 27
    TIMES           shift and go to state 28
    MINUS           shift and go to state 29
    DIVIDE          shift and go to state 30


state 18

    (19) statement -> IF LPAREN expression . RPAREN LACC bloc RACC
    (20) statement -> IF LPAREN expression . RPAREN LACC bloc RACC ELSE LACC bloc RACC
    (6) expression -> expression . INF expression
    (7) expression -> expression . INFEG expression
    (8) expression -> expression . SUP expression
    (9) expression -> expression . EGALEGAL expression
    (10) expression -> expression . AND expression
    (11) expression -> expression . OR expression
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . TIMES expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 31
    INF             shift and go to state 21
    INFEG           shift and go to state 22
    SUP             shift and go to state 23
    EGALEGAL        shift and go to state 24
    AND             shift and go to state 25
    OR              shift and go to state 26
    PLUS            shift and go to state 27
    TIMES           shift and go to state 28
    MINUS           shift and go to state 29
    DIVIDE          shift and go to state 30


state 19

    (16) expression -> LPAREN expression . RPAREN
    (6) expression -> expression . INF expression
    (7) expression -> expression . INFEG expression
    (8) expression -> expression . SUP expression
    (9) expression -> expression . EGALEGAL expression
    (10) expression -> expression . AND expression
    (11) expression -> expression . OR expression
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . TIMES expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 32
    INF             shift and go to state 21
    INFEG           shift and go to state 22
    SUP             shift and go to state 23
    EGALEGAL        shift and go to state 24
    AND             shift and go to state 25
    OR              shift and go to state 26
    PLUS            shift and go to state 27
    TIMES           shift and go to state 28
    MINUS           shift and go to state 29
    DIVIDE          shift and go to state 30


state 20

    (4) statement -> PRINT LPAREN expression RPAREN .

    SEMI            reduce using rule 4 (statement -> PRINT LPAREN expression RPAREN .)


state 21

    (6) expression -> expression INF . expression
    (6) expression -> . expression INF expression
    (7) expression -> . expression INFEG expression
    (8) expression -> . expression SUP expression
    (9) expression -> . expression EGALEGAL expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 33

state 22

    (7) expression -> expression INFEG . expression
    (6) expression -> . expression INF expression
    (7) expression -> . expression INFEG expression
    (8) expression -> . expression SUP expression
    (9) expression -> . expression EGALEGAL expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 34

state 23

    (8) expression -> expression SUP . expression
    (6) expression -> . expression INF expression
    (7) expression -> . expression INFEG expression
    (8) expression -> . expression SUP expression
    (9) expression -> . expression EGALEGAL expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 35

state 24

    (9) expression -> expression EGALEGAL . expression
    (6) expression -> . expression INF expression
    (7) expression -> . expression INFEG expression
    (8) expression -> . expression SUP expression
    (9) expression -> . expression EGALEGAL expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 36

state 25

    (10) expression -> expression AND . expression
    (6) expression -> . expression INF expression
    (7) expression -> . expression INFEG expression
    (8) expression -> . expression SUP expression
    (9) expression -> . expression EGALEGAL expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 37

state 26

    (11) expression -> expression OR . expression
    (6) expression -> . expression INF expression
    (7) expression -> . expression INFEG expression
    (8) expression -> . expression SUP expression
    (9) expression -> . expression EGALEGAL expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 38

state 27

    (12) expression -> expression PLUS . expression
    (6) expression -> . expression INF expression
    (7) expression -> . expression INFEG expression
    (8) expression -> . expression SUP expression
    (9) expression -> . expression EGALEGAL expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 39

state 28

    (13) expression -> expression TIMES . expression
    (6) expression -> . expression INF expression
    (7) expression -> . expression INFEG expression
    (8) expression -> . expression SUP expression
    (9) expression -> . expression EGALEGAL expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 40

state 29

    (14) expression -> expression MINUS . expression
    (6) expression -> . expression INF expression
    (7) expression -> . expression INFEG expression
    (8) expression -> . expression SUP expression
    (9) expression -> . expression EGALEGAL expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 41

state 30

    (15) expression -> expression DIVIDE . expression
    (6) expression -> . expression INF expression
    (7) expression -> . expression INFEG expression
    (8) expression -> . expression SUP expression
    (9) expression -> . expression EGALEGAL expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 15
    NAME            shift and go to state 16

    expression                     shift and go to state 42

state 31

    (19) statement -> IF LPAREN expression RPAREN . LACC bloc RACC
    (20) statement -> IF LPAREN expression RPAREN . LACC bloc RACC ELSE LACC bloc RACC

    LACC            shift and go to state 43


state 32

    (16) expression -> LPAREN expression RPAREN .

    RPAREN          reduce using rule 16 (expression -> LPAREN expression RPAREN .)
    INF             reduce using rule 16 (expression -> LPAREN expression RPAREN .)
    INFEG           reduce using rule 16 (expression -> LPAREN expression RPAREN .)
    SUP             reduce using rule 16 (expression -> LPAREN expression RPAREN .)
    EGALEGAL        reduce using rule 16 (expression -> LPAREN expression RPAREN .)
    AND             reduce using rule 16 (expression -> LPAREN expression RPAREN .)
    OR              reduce using rule 16 (expression -> LPAREN expression RPAREN .)
    PLUS            reduce using rule 16 (expression -> LPAREN expression RPAREN .)
    TIMES           reduce using rule 16 (expression -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 16 (expression -> LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 16 (expression -> LPAREN expression RPAREN .)
    SEMI            reduce using rule 16 (expression -> LPAREN expression RPAREN .)


state 33

    (6) expression -> expression INF expression .
    (6) expression -> expression . INF expression
    (7) expression -> expression . INFEG expression
    (8) expression -> expression . SUP expression
    (9) expression -> expression . EGALEGAL expression
    (10) expression -> expression . AND expression
    (11) expression -> expression . OR expression
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . TIMES expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . DIVIDE expression

    RPAREN          reduce using rule 6 (expression -> expression INF expression .)
    INF             reduce using rule 6 (expression -> expression INF expression .)
    INFEG           reduce using rule 6 (expression -> expression INF expression .)
    SUP             reduce using rule 6 (expression -> expression INF expression .)
    EGALEGAL        reduce using rule 6 (expression -> expression INF expression .)
    AND             reduce using rule 6 (expression -> expression INF expression .)
    OR              reduce using rule 6 (expression -> expression INF expression .)
    SEMI            reduce using rule 6 (expression -> expression INF expression .)
    PLUS            shift and go to state 27
    TIMES           shift and go to state 28
    MINUS           shift and go to state 29
    DIVIDE          shift and go to state 30

  ! PLUS            [ reduce using rule 6 (expression -> expression INF expression .) ]
  ! TIMES           [ reduce using rule 6 (expression -> expression INF expression .) ]
  ! MINUS           [ reduce using rule 6 (expression -> expression INF expression .) ]
  ! DIVIDE          [ reduce using rule 6 (expression -> expression INF expression .) ]
  ! INF             [ shift and go to state 21 ]
  ! INFEG           [ shift and go to state 22 ]
  ! SUP             [ shift and go to state 23 ]
  ! EGALEGAL        [ shift and go to state 24 ]
  ! AND             [ shift and go to state 25 ]
  ! OR              [ shift and go to state 26 ]


state 34

    (7) expression -> expression INFEG expression .
    (6) expression -> expression . INF expression
    (7) expression -> expression . INFEG expression
    (8) expression -> expression . SUP expression
    (9) expression -> expression . EGALEGAL expression
    (10) expression -> expression . AND expression
    (11) expression -> expression . OR expression
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . TIMES expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . DIVIDE expression

    RPAREN          reduce using rule 7 (expression -> expression INFEG expression .)
    INF             reduce using rule 7 (expression -> expression INFEG expression .)
    INFEG           reduce using rule 7 (expression -> expression INFEG expression .)
    SUP             reduce using rule 7 (expression -> expression INFEG expression .)
    EGALEGAL        reduce using rule 7 (expression -> expression INFEG expression .)
    AND             reduce using rule 7 (expression -> expression INFEG expression .)
    OR              reduce using rule 7 (expression -> expression INFEG expression .)
    SEMI            reduce using rule 7 (expression -> expression INFEG expression .)
    PLUS            shift and go to state 27
    TIMES           shift and go to state 28
    MINUS           shift and go to state 29
    DIVIDE          shift and go to state 30

  ! PLUS            [ reduce using rule 7 (expression -> expression INFEG expression .) ]
  ! TIMES           [ reduce using rule 7 (expression -> expression INFEG expression .) ]
  ! MINUS           [ reduce using rule 7 (expression -> expression INFEG expression .) ]
  ! DIVIDE          [ reduce using rule 7 (expression -> expression INFEG expression .) ]
  ! INF             [ shift and go to state 21 ]
  ! INFEG           [ shift and go to state 22 ]
  ! SUP             [ shift and go to state 23 ]
  ! EGALEGAL        [ shift and go to state 24 ]
  ! AND             [ shift and go to state 25 ]
  ! OR              [ shift and go to state 26 ]


state 35

    (8) expression -> expression SUP expression .
    (6) expression -> expression . INF expression
    (7) expression -> expression . INFEG expression
    (8) expression -> expression . SUP expression
    (9) expression -> expression . EGALEGAL expression
    (10) expression -> expression . AND expression
    (11) expression -> expression . OR expression
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . TIMES expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . DIVIDE expression

    RPAREN          reduce using rule 8 (expression -> expression SUP expression .)
    INF             reduce using rule 8 (expression -> expression SUP expression .)
    INFEG           reduce using rule 8 (expression -> expression SUP expression .)
    SUP             reduce using rule 8 (expression -> expression SUP expression .)
    EGALEGAL        reduce using rule 8 (expression -> expression SUP expression .)
    AND             reduce using rule 8 (expression -> expression SUP expression .)
    OR              reduce using rule 8 (expression -> expression SUP expression .)
    SEMI            reduce using rule 8 (expression -> expression SUP expression .)
    PLUS            shift and go to state 27
    TIMES           shift and go to state 28
    MINUS           shift and go to state 29
    DIVIDE          shift and go to state 30

  ! PLUS            [ reduce using rule 8 (expression -> expression SUP expression .) ]
  ! TIMES           [ reduce using rule 8 (expression -> expression SUP expression .) ]
  ! MINUS           [ reduce using rule 8 (expression -> expression SUP expression .) ]
  ! DIVIDE          [ reduce using rule 8 (expression -> expression SUP expression .) ]
  ! INF             [ shift and go to state 21 ]
  ! INFEG           [ shift and go to state 22 ]
  ! SUP             [ shift and go to state 23 ]
  ! EGALEGAL        [ shift and go to state 24 ]
  ! AND             [ shift and go to state 25 ]
  ! OR              [ shift and go to state 26 ]


state 36

    (9) expression -> expression EGALEGAL expression .
    (6) expression -> expression . INF expression
    (7) expression -> expression . INFEG expression
    (8) expression -> expression . SUP expression
    (9) expression -> expression . EGALEGAL expression
    (10) expression -> expression . AND expression
    (11) expression -> expression . OR expression
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . TIMES expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . DIVIDE expression

    RPAREN          reduce using rule 9 (expression -> expression EGALEGAL expression .)
    INF             reduce using rule 9 (expression -> expression EGALEGAL expression .)
    INFEG           reduce using rule 9 (expression -> expression EGALEGAL expression .)
    SUP             reduce using rule 9 (expression -> expression EGALEGAL expression .)
    EGALEGAL        reduce using rule 9 (expression -> expression EGALEGAL expression .)
    AND             reduce using rule 9 (expression -> expression EGALEGAL expression .)
    OR              reduce using rule 9 (expression -> expression EGALEGAL expression .)
    SEMI            reduce using rule 9 (expression -> expression EGALEGAL expression .)
    PLUS            shift and go to state 27
    TIMES           shift and go to state 28
    MINUS           shift and go to state 29
    DIVIDE          shift and go to state 30

  ! PLUS            [ reduce using rule 9 (expression -> expression EGALEGAL expression .) ]
  ! TIMES           [ reduce using rule 9 (expression -> expression EGALEGAL expression .) ]
  ! MINUS           [ reduce using rule 9 (expression -> expression EGALEGAL expression .) ]
  ! DIVIDE          [ reduce using rule 9 (expression -> expression EGALEGAL expression .) ]
  ! INF             [ shift and go to state 21 ]
  ! INFEG           [ shift and go to state 22 ]
  ! SUP             [ shift and go to state 23 ]
  ! EGALEGAL        [ shift and go to state 24 ]
  ! AND             [ shift and go to state 25 ]
  ! OR              [ shift and go to state 26 ]


state 37
